--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
   },
   "dependencies": {
     "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
+    "es6-shim": "^0.35.8",
     "express": "^4.19.2",
     "jest": "^29.7.0",
+    "mysql2": "^3.11.0",
+    "reflect-metadata": "^0.2.2",
     "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typeorm": "^0.3.20"
   }
 }
